fix: use correct dark mode specificity

--- a/packages/css/src/base/color-preference.css
+++ b/packages/css/src/base/color-preference.css
@@ -7,7 +7,7 @@
 	}
 
 	@media (prefers-color-scheme: dark) {
-		:root {
+		:where(:root) {
 			--st-color-preference-light: initial;
 			--st-color-preference-dark: ;
 		}
